fixed z-index

--- a/article1-thats-entertainment/style.css
+++ b/article1-thats-entertainment/style.css
@@ -94,7 +94,7 @@ h2{
 	margin: 0;
 }
 
-.sticky{
+h2{
 	position: sticky;
 	top: 0;
 	z-index: 1;
@@ -128,7 +128,7 @@ p{
 	padding-top: 5%;
 	padding-bottom: 5%;
 	position:relative;
-	z-index: 1;
+	z-index: -2;
 }
 .quote-container::before{
 	content: '';
@@ -138,7 +138,7 @@ p{
 	left:50px; */
 	position:absolute;
 	background-color: #8F70FF;
-	z-index: -1;
+	z-index: -3;
 	margin-left: 10px;
 	margin-top: 10px;
 }
